force-app/main/default/objects/Welcome_Call_Checklist__c/Welcome_Call_Checklist__c.object-meta.xml
<CustomObject>
    <label>Welcome Call Checklist</label>
    <nameField>
        <displayFormat>WC-{00000}</displayFormat>
        <label>Welcome Call Checklist Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Welcome Call Checklists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>