force-app/main/default/objects/Welcome_Call_Checklist__c/fields/Booking__c.field-meta.xml
<CustomField>
    <fullName>Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking</label>
    <referenceTo>Booking__c</referenceTo>
    <relationshipLabel>Welcome Call Checklists</relationshipLabel>
    <relationshipName>Welcome_Call_Checklists</relationshipName>
    <type>Lookup</type>
</CustomField>