force-app/main/default/objects/Welcome_Call_Checklist__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Payment Details</fullName>
            </value>
            <value>
                <fullName>Client Signatures</fullName>
            </value>
            <value>
                <fullName>Strike Out</fullName>
            </value>
            <value>
                <fullName>Overwriting</fullName>
            </value>
            <value>
                <fullName>Future Correspondence</fullName>
            </value>
            <value>
                <fullName>Booking Details</fullName>
            </value>
            <value>
                <fullName>Receipt Details</fullName>
            </value>
            <value>
                <fullName>Source of Booking Details</fullName>
            </value>
            <value>
                <fullName>Deal Approval Details : Quotation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>